<resources>
    <string name="app_name">MyDailyOutfit</string>
    <string name="Foto">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foto">Foto</string>
    <string name="fotoCami">Foto</string>
    <string name="fotoFaldas">Foto</string>
    <string name="fotoPantalones">Foto</string>
    <string name="fotoShorts">Foto</string>
    <string name="fotoVestidos">Foto</string>
    <string name="logo">Logo</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="a_n_no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="registrate">¡Regístrate!</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="logo_inicio_de_sesi_n">Logo Inicio de Sesión</string>
    <string name="ingresar_nombre">Ingresar Nombre</string>
    <string name="ingresar_apellido">Ingresar Apellido</string>
    <string name="ingresar_sexo">Ingresar Sexo</string>
    <string name="ingresar_correo">Ingresar Correo</string>
    <string name="ingresar_contrase_a">Ingresar Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="crear_cuenta">Crear Cuenta</string>
</resources>