<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inicio_de_sesi_n"
                android:textColor="@color/myDailyOutfit"
                android:textSize="34sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/usuario"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/usuario"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:textColor="@color/myDailyOutfit" />

            <EditText
                android:id="@+id/etClave"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/candado"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:textColor="@color/myDailyOutfit"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btniniciarsesion"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/myDailyOutfit"
                android:text="@string/iniciar_sesi_n"
                android:onClick="IniciarSesion"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_n_no_tienes_cuenta"
                android:textColor="@color/myDailyOutfit"
                android:textSize="17dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrate"
                android:textColor="@color/myDailyOutfit"
                android:textSize="17dp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo_inicio_de_sesi_n"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>