<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCuenta"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logosinfondo"
        android:layout_centerHorizontal="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/background"
        app:cardElevation="0dp">

        <!--
            android:layout_gravity="bottom|end"
    android:layout_marginBottom="-80dp"
    app:cardCornerRadius="100dp"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondocrearcuenta"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:textAlignment="center"
                android:textColor="@color/myDailyOutfit"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/ingresar_nombre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/myDailyOutfit" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/ingresar_apellido"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/myDailyOutfit"/>

            <EditText
                android:id="@+id/etSexo"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/ingresar_sexo"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/myDailyOutfit"/>

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/ingresar_correo"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/myDailyOutfit"/>

            <EditText
                android:id="@+id/etClave"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/ingresar_contrase_a"
                android:inputType="text"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/myDailyOutfit"/>

            <Button
                android:id="@+id/button"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/myDailyOutfit"
                android:text="@string/crear_cuenta"
                android:onClick="RegistrarDatos"
                android:textSize="17sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>